2003/11/07 16:49 pcg

	* xs/GdkWindow.xs: implement gdk_window_set_debug_updates.
        * MANIFEST: Add xs_files*.

2003/11/07 11:53 (+0100) kaffeetisch

	* xs/GtkClipboard.xs: Two other places where PERL_UNUSED_VAR was called
	before variables are declared.  Fix necessary to make it compile on
	FreeBSD.

2003/11/06 16:53 (-0500) muppetman

	* Gtk2.pm: link to the generated pods.

2003/11/06 10:30 (-0500) muppetman

	* xs/Gtk2.xs: handle logs for GdkPixbuf, too.

2003/11/06 13:48 kaffeetisch

	* xs/GtkItemFactory.xs: Call dSP before PERL_UNUSED_VAR to make it
	compile on FreeBSD.

2003/11/03 14:05 muppetman

	* xs/GdkEvent.xs: GenPod uses instance arg names now, so we can
	remove all the ugly signature overrides.

2003/11/03 18:37 pcg

	* Makefile.PL: avoid "package MY" for easier access to variables.
	* MANIFEST: ScrollBar => Scrollbar.
        * api.pod: Document Scorll[bB] change.

2003/11/03 12:18 muppetman

	* Makefile.PL: @lists needs to be our, not my.  updated some comments.

	* t/00.Gtk2.t: scalar versus list context bug in version info test

	* AUTHORS: added bjarne to the contributors list

2003/11/03 16:24 pcg

	* xs/GtkWidget.xs: Implement a bunch of minor methods, some of them
        even tested.

2003/11/03 12:45 muppetman

	A xs_files-2.0: new file listing source files for gtk+-2.0.x
	A xs_files-2.2: new file listing source files for gtk+-2.2.x
	* CodeGen.pm, Makefile.PL: modify build to use explicit lists of
	source code files based on the discovered gtk+ version, rather
	than just globbing all the files the xs dir.

	D xs/GtkHScrollBar.xs
	A xs/GtkHScrollbar.xs
	D xs/GtkVScrollBar.xs
	A xs/GtkVScrollbar.xs
	long ago, in the early days of gtk2-perl-xs, these files were
	created with the wrong capitalization of the file and package
	names; register.xsh registers Gtk2::[VH]Scrollbar, but the
	files implement Gtk2::[VH]ScrollBar.  since this is wrong, i have
	corrected it by changing the package names and renaming the files,